--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "cardx",
   "version": "0.1.0",
-  "private": true,
+  "author": "diogo@diogocordeiro.pt",
+  "license": "ISC",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,8 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "mongodb": "^4.1.2",
-    "next": "11.1.2",
+    "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
