--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.7.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "mongodb": "^4.1.2",
